--- a/prd/magnolia-public-frontend.yaml
+++ b/prd/magnolia-public-frontend.yaml
@@ -17,8 +17,8 @@ spec:
       k8s.kuboard.cn/name: magnolia-public-frontend
   strategy:
     rollingUpdate:
-      maxSurge: 2
-      maxUnavailable: 1
+      maxSurge: 3
+      maxUnavailable: 0
     type: RollingUpdate
   template:
     metadata:
@@ -29,6 +29,12 @@ spec:
         k8s.kuboard.cn/name: magnolia-public-frontend
     spec:
       affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  k8s.kuboard.cn/name: saas-homework-service
+              topologyKey: kubernetes.io/hostname
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
