--- a/qa/magnolia-public-mobile.yaml
+++ b/qa/magnolia-public-mobile.yaml
@@ -29,7 +29,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
-                  k8s.kuboard.cn/name: saas-homework-service
+                  k8s.kuboard.cn/name: saas-transfer-service
               topologyKey: kubernetes.io/hostname
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -61,10 +61,10 @@ spec:
             timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1"
+              cpu: "2"
               memory: 4Gi
             requests:
-              cpu: "1"
+              cpu: "2"
               memory: 4Gi
       restartPolicy: Always
       schedulerName: default-scheduler
