bash for cron-job

--- a/prd/magnolia-public-frontend.yaml
+++ b/prd/magnolia-public-frontend.yaml
@@ -43,7 +43,7 @@ spec:
               topologyKey: kubernetes.io/hostname
       containers:
         - command:
-            - sh
+            - bash
             - /code/scripts/cron-job.sh
           env:
             - name : TZ
