--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -18,7 +18,7 @@ spec:
   strategy:
     rollingUpdate:
       maxSurge: 1 
-      maxUnavailable: 1
+      maxUnavailable: 0
     type: RollingUpdate
   template:
     metadata:
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - command:
-            - sh
+            - bash
             - /code/scripts/cron-job.sh
           env:
             - name : TZ
