--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -39,7 +39,7 @@ spec:
               weight: 100
       containers:
         - command:
-            - sh
+            - bash
             - /code/scripts/cron-job.sh
           env:
             - name : TZ
