--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -1,4 +1,15 @@
 ---
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: public-frontend-pdb
+  namespace: zb-schools
+spec:
+  minAvailable: 1
+  selecter:
+    matchLabels:
+      k8s.kuboard.cn/name: magnolia-public-frontend
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -10,14 +21,14 @@ metadata:
   namespace: zb-schools
 spec:
   progressDeadlineSeconds: 600
-  replicas: 1
+  replicas: 3
   revisionHistoryLimit: 10
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-public-frontend
   strategy:
     rollingUpdate:
-      maxSurge: 1 
+      maxSurge: 3 
       maxUnavailable: 0
     type: RollingUpdate
   template:
@@ -28,6 +39,15 @@ spec:
       labels:
         k8s.kuboard.cn/name: magnolia-public-frontend
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name: magnolia-public-frontend
+                topologyKey: kubernetes.io/hostname
+              weight: 100
       containers:
         - command:
             - bash
@@ -55,10 +75,7 @@ spec:
           resources:
             limits:
               cpu: "1"
-              memory: 4Gi
-            requests:
-              cpu: "1000m"
-              memory: 900Mi
+              memory: 2Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
