--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: zb-schools
 spec:
   minAvailable: 1
-  selecter:
+  selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-public-frontend
 ---
