--- a/prd/magnolia-public-backend.yaml
+++ b/prd/magnolia-public-backend.yaml
@@ -1,4 +1,15 @@
 ---
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: magnolia-public-backend-pdb
+  namespace: zb-schools
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      k8s.kuboard.cn/name: magnolia-public-backend
+---
 apiVersion: apps/v1
 kind: Deployment 
 metadata:
@@ -16,7 +27,7 @@ spec:
       k8s.kuboard.cn/name: magnolia-public-backend
   strategy:
     rollingUpdate:
-      maxSurge: 2
+      maxSurge: 3
       maxUnavailable: 0
     type: RollingUpdate
   template:
