--- a/prd/magnolia-public-mobile.yaml
+++ b/prd/magnolia-public-mobile.yaml
@@ -1,4 +1,15 @@
 ---
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: nginx-mobile-pdb
+  namespace: zb-schools
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      k8s.kuboard.cn/name: nginx-mobile
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,7 +24,7 @@ spec:
       k8s.kuboard.cn/name: nginx-mobile
   strategy:
     rollingUpdate:
-      maxSurge: 2
+      maxSurge: 3
       maxUnavailable: 0
     type: RollingUpdate
   template:
@@ -56,9 +67,6 @@ spec:
             timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1"
-              memory: 2Gi
-            requests:
               cpu: "1"
               memory: 2Gi
           volumeMounts:
