--- a/prd/saas-homework-service.yaml
+++ b/prd/saas-homework-service.yaml
@@ -1,4 +1,15 @@
 ---
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: homework-service-pdb
+  namespace: zb-schools
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      k8s.kuboard.cn/name: saas-homework-service
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,7 +28,7 @@ spec:
       k8s.kuboard.cn/name: saas-homework-service
   strategy:
     rollingUpdate:
-      maxSurge: 2
+      maxSurge: 3
       maxUnavailable: 0
     type: RollingUpdate
   template:
