--- a/prd/magnolia-public-mobile.yaml
+++ b/prd/magnolia-public-mobile.yaml
@@ -128,7 +128,7 @@ data:
 
 
         location /  {
-                root /usr/share/nginx/html;
+                root /usr/share/nginx/html-prd;
                 index  index.html;
                 client_max_body_size 1000m;
                 try_files $uri $uri/ /index.html @rewrites;
@@ -139,7 +139,7 @@ data:
             }
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /usr/share/nginx/html;
+            root   /usr/share/nginx/html-prd;
         }
 
     }
