--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -46,6 +46,13 @@ spec:
                 name: magnolia-author-backend-svc
                 port:
                   number: 8080
+          - path: /share
+            pathType: Prefix
+            backend:
+              service:
+                name: magnolia-public-frontend-svc
+                port:
+                  number: 80
     - host: m.sit.zbschools.sg
       http:
         paths:
