--- a/prd/magnolia-public-frontend.yaml
+++ b/prd/magnolia-public-frontend.yaml
@@ -198,10 +198,14 @@ data:
                   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                   proxy_set_header X-Forwarded-Proto $scheme;
             }
-
-
-            
-            location @rewrites {
+            location /share/ {
+              proxy_pass http://magnolia-public-backend-svc:8080/magnoliaPublic/.rest/delivery/share/v1/article/;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+           }            
+           location @rewrites {
                 rewrite ^(.+)$ /index.html break;
             }
             error_page 500 502 503 504 /50x.html;
