--- a/qa/ingress.yaml
+++ b/qa/ingress.yaml
@@ -53,6 +53,13 @@ spec:
                   number: 8080
             path: /data/test
             pathType: Prefix
+          - path: /share
+            pathType: Prefix
+            backend:
+              service:
+                name: magnolia-public-frontend-svc
+                port:
+                  number: 80
     - host: m.uat.zbschools.sg
       http:
         paths:
