karpenter-do-not-disrupt

--- a/qa/saas-homework-service.yaml
+++ b/qa/saas-homework-service.yaml
@@ -34,6 +34,7 @@ spec:
   template:
     metadata:
       annotations:
+        karpenter.sh/do-not-disrupt: "true"
         karpenter.sh/do-not-disrupt: "false"
         kubectl.kubernetes.io/restartedAt: "2024-06-26T11:46:16+08:00"
         vault.hashicorp.com/agent-inject: "true"
