--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -203,6 +203,14 @@ data:
               proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /games/ {
+              proxy_pass http://magnolia-public-games-svc:80/;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location @rewrites {
             rewrite ^(.+)$ /index.html break;
         }
