--- a/dev/magnolia-author-frontend.yaml
+++ b/dev/magnolia-author-frontend.yaml
@@ -29,6 +29,13 @@ spec:
       labels:
         k8s.kuboard.cn/name: magnolia-author-frontend
     spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  k8s.kuboard.cn/name: magnolia-author-backend
+              topologyKey: kubernetes.io/hostname
       containers:
         - image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-frontend"
           imagePullPolicy: Always
