--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -39,6 +39,13 @@ spec:
       labels:
         k8s.kuboard.cn/name: magnolia-public-frontend
     spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  k8s.kuboard.cn/name: magnolia-author-backend
+              topologyKey: kubernetes.io/hostname
       containers:
         - command:
             - bash
