--- a/qa/magnolia-public-mobile.yaml
+++ b/qa/magnolia-public-mobile.yaml
@@ -35,6 +35,13 @@ spec:
       labels:
         k8s.kuboard.cn/name: nginx-mobile
     spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  k8s.kuboard.cn/name: magnolia-author-backend
+              topologyKey: kubernetes.io/hostname
       containers:
         - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile"
           imagePullPolicy: IfNotPresent
@@ -55,13 +62,6 @@ spec:
             tcpSocket:
               port: 80
             timeoutSeconds: 2
-          resources:
-            limits:
-              cpu: "1"
-              memory: 2Gi
-            requests:
-              cpu: "1"
-              memory: 2Gi
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
