--- a/qa/saas-homework-service.yaml
+++ b/qa/saas-homework-service.yaml
@@ -48,19 +48,17 @@ spec:
         k8s.kuboard.cn/name: saas-homework-service
     spec:
       affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
-                labelSelector:
-                  matchLabels:
-                    k8s.kuboard.cn/name: saas-homework-service
-                topologyKey: kubernetes.io/hostname
-              weight: 100
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  k8s.kuboard.cn/name: magnolia-public-backend
+              topologyKey: kubernetes.io/hostname
       containers:
         - command:
             - /bin/bash
             - "-ce"
-            - java  -Xms2g -Xmx4g -Dnewrelic.environment=uat -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar  -server.tomcat.max-threads=1500
+            - java  -Xms1g -Xmx4g -Dnewrelic.environment=uat -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar  -server.tomcat.max-threads=1500
           image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-homework-service"
           imagePullPolicy: Always
           env:
@@ -81,14 +79,6 @@ spec:
             tcpSocket:
               port: 8080
             timeoutSeconds: 2
-          resources:
-            limits:
-              cpu: "4"
-              memory: 6Gi
-            requests:
-              cpu: "4"
-              memory: 6Gi
-          terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       imagePullSecrets:
