--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -40,6 +40,13 @@ spec:
       labels:
         k8s.kuboard.cn/name: saas-transfer-service
     spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  k8s.kuboard.cn/name: magnolia-public-backend
+              topologyKey: kubernetes.io/hostname
       containers:
         - command:
             - /bin/bash
@@ -65,13 +72,6 @@ spec:
             tcpSocket:
               port: 8081
             timeoutSeconds: 2
-          resources:
-            limits:
-              cpu: "1"
-              memory: 3Gi
-            requests:
-              cpu: "1"
-              memory: 3Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
