--- a/prd/magnolia-public-mobile.yaml
+++ b/prd/magnolia-public-mobile.yaml
@@ -37,14 +37,16 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
-                  k8s.kuboard.cn/name: magnolia-public-frontend
+                  k8s.kuboard.cn/name: magnolia-public-backend
               topologyKey: kubernetes.io/hostname
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchLabels:
-                  k8s.kuboard.cn/name: nginx-mobile
-              topologyKey: kubernetes.io/hostname
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name:  nginx-mobile
+                topologyKey: kubernetes.io/hostname
+              weigh70t: 60
       containers:
         - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile"
           imagePullPolicy: IfNotPresent
