--- a/prd/saas-homework-service.yaml
+++ b/prd/saas-homework-service.yaml
@@ -48,12 +48,20 @@ spec:
         k8s.kuboard.cn/name: saas-homework-service
     spec:
       affinity:
-        podAntiAffinity:
+        podAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
-                  k8s.kuboard.cn/name: saas-homework-service
+                  k8s.kuboard.cn/name: magnolia-public-backend
               topologyKey: kubernetes.io/hostname
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name:  saas-homework-service
+                topologyKey: kubernetes.io/hostname
+              weigh70t: 60
       containers:
         - command:
             - /bin/bash
@@ -83,9 +91,6 @@ spec:
             limits:
               cpu: "2"
               memory: 6Gi
-            requests:
-              cpu: "2"
-              memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
