--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -37,7 +37,7 @@ spec:
         k8s.kuboard.cn/name: saas-homework-service
     spec:
       affinity:
-        podAffinity:
+        podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
