--- a/dev/tencent-games.yaml
+++ b/dev/tencent-games.yaml
@@ -21,6 +21,15 @@ spec:
       labels:
         k8s.kuboard.cn/name: tencent-games
     spec:
+      affinity:
+        podAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name: saas-homework-service
+                topologyKey: kubernetes.io/hostname
+              weight: 100
       containers:
         - image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/tencent-games"
           imagePullPolicy: IfNotPresent
