--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -42,6 +42,7 @@ spec:
             - labelSelector:
                 matchLabels:
                   k8s.kuboard.cn/name: magnolia-public-backend
+                  k8s.kuboard.cn/name: magnolia-author-backend
               topologyKey: kubernetes.io/hostname
       containers:
         - command:
