--- a/prd/tencent-games.yaml
+++ b/prd/tencent-games.yaml
@@ -1,36 +1,25 @@
 ---
-apiVersion: policy/v1
-kind: PodDisruptionBudget
-metadata:
-  name: nginx-mobile-pdb
-  namespace: zb-schools
-spec:
-  minAvailable: 1
-  selector:
-    matchLabels:
-      k8s.kuboard.cn/name: nginx-mobile
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: magnolia-public-mobile
+  name: tencent-games 
   namespace: zb-schools
   labels:
-    k8s.kuboard.cn/name: nginx-mobile
+    k8s.kuboard.cn/name: tencent-games
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      k8s.kuboard.cn/name: nginx-mobile
+      k8s.kuboard.cn/name: tencent-games
   strategy:
     rollingUpdate:
-      maxSurge: 3
-      maxUnavailable: 0
+      maxSurge: 1
+      maxUnavailable: 0 
     type: RollingUpdate
   template:
     metadata:
       labels:
-        k8s.kuboard.cn/name: nginx-mobile
+        k8s.kuboard.cn/name: tencent-games
     spec:
       affinity:
         podAffinity:
@@ -41,16 +30,8 @@ spec:
                     k8s.kuboard.cn/name: saas-homework-service
                 topologyKey: kubernetes.io/hostname
               weight: 100
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
-                labelSelector:
-                  matchLabels:
-                    k8s.kuboard.cn/name:  nginx-mobile
-                topologyKey: kubernetes.io/hostname
-              weight: 100
       containers:
-        - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile"
+        - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/tencent-games"
           imagePullPolicy: IfNotPresent
           name: nginx
           ports:
@@ -59,16 +40,12 @@ spec:
               protocol: TCP
           readinessProbe:
             failureThreshold: 3
-            initialDelaySeconds: 10
+            initialDelaySeconds: 50
             periodSeconds: 5
             successThreshold: 1
             tcpSocket:
               port: 80
             timeoutSeconds: 2
-          resources:
-            limits:
-              cpu: "1"
-              memory: 2Gi
           volumeMounts:
             - mountPath: /etc/nginx/conf.d/default.conf
               name: volume-conf
@@ -79,16 +56,16 @@ spec:
       volumes:
         - configMap:
             defaultMode: 420
-            items:
-              - key: nginx-mobile.conf
+            items: 
+              - key: nginx-tencent-games.conf
                 path: default.conf
-            name: mobile-nginx-conf
+            name: tencent-games-nginx-conf
           name: volume-conf
 
 ---
 apiVersion: v1
 data:
-  nginx-mobile.conf: |-
+  nginx-tencent-games.conf: |-
     gzip on;
     gzip_comp_level 5;
     gzip_min_length 3;
@@ -129,44 +106,42 @@ data:
         client_max_body_size 1000M;
         access_log /mnt/access.log main;
         error_log /mnt/error.log warn;
-
-
+        
         location /  {
-                root /usr/share/nginx/html-prd;
+                root /usr/share/nginx/html;
                 index  index.html;
                 client_max_body_size 1000m;
                 try_files $uri $uri/ /index.html @rewrites;
             }
 
         location @rewrites {
-                rewrite ^(.+)$ /index.html break; # 重定向规则 
+                rewrite ^(.+)$ /index.html break; # 重定向规则
             }
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /usr/share/nginx/html-prd;
+            root   /usr/share/nginx/html;
         }
-
     }
 kind: ConfigMap
 metadata:
   annotations: {}
   labels: {}
-  name: mobile-nginx-conf
+  name: tencent-games-nginx-conf
   namespace: zb-schools
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-mobile-svc
+  name: magnolia-public-games-svc
   namespace: zb-schools
 spec:
   ports:
-    - name: ngmobile
+    - name: ngames
       port: 80
       protocol: TCP
       targetPort: 80
   selector:
-    k8s.kuboard.cn/name: nginx-mobile
+    k8s.kuboard.cn/name: tencent-games
   type: ClusterIP
   sessionAffinity: ClientIP
   sessionAffinityConfig:
