--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -72,6 +72,10 @@ spec:
             tcpSocket:
               port: 8080
             timeoutSeconds: 2
+          resources:
+            limits:
+              cpu: "4"
+              memory: 6Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
