--- a/dev/saas-transfer-service.yaml
+++ b/dev/saas-transfer-service.yaml
@@ -66,6 +66,10 @@ spec:
             tcpSocket:
               port: 8081
             timeoutSeconds: 2
+          resources:
+            limits:
+              cpu: "2"
+              memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
