--- a/qa/magnolia-author-frontend.yaml
+++ b/qa/magnolia-author-frontend.yaml
@@ -52,6 +52,10 @@ spec:
             tcpSocket:
               port: 80
             timeoutSeconds: 2
+          resources:
+            limits:
+              cpu: "2"
+              memory: 2Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
