--- a/qa/saas-homework-service.yaml
+++ b/qa/saas-homework-service.yaml
@@ -84,6 +84,10 @@ spec:
             tcpSocket:
               port: 8080
             timeoutSeconds: 2
+          resources:
+            limits:
+              cpu: "4"
+              memory: 6Gi
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       imagePullSecrets:
