--- a/prd/tencent-games.yaml
+++ b/prd/tencent-games.yaml
@@ -27,7 +27,7 @@ spec:
             - podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    k8s.kuboard.cn/name: saas-homework-service
+                    k8s.kuboard.cn/name: magnolia-author-backend
                 topologyKey: kubernetes.io/hostname
               weight: 100
       containers:
@@ -46,6 +46,10 @@ spec:
             tcpSocket:
               port: 80
             timeoutSeconds: 2
+          resources:
+            limits:
+              cpu: "2"
+              memory: 2Gi
           volumeMounts:
             - mountPath: /etc/nginx/conf.d/default.conf
               name: volume-conf
