--- a/ack/prd/saas-transfer-service.yaml
+++ b/ack/prd/saas-transfer-service.yaml
@@ -58,7 +58,7 @@ spec:
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       imagePullSecrets:
-        - name: aws-ecr
+        - name: sph-ack-test
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
